--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-  }
+}
 body{
     font-family: 'Courier New', Courier, monospace;
     width: 100%;
@@ -32,7 +32,7 @@ form input{
     margin-left: 20px;
     width: 250px;
     height: 25px;
-    border-color: burlywood;
+    border-color: black;
     border-radius: 5px;
 }
 input[type="button"]{
